--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
