--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "eslint *.js **/*.js"
   },
   "dependencies": {
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "expo": "^35.0.0",
-    "react": "16.8.3",
     "expo-linear-gradient": "^6.0.0",
     "prop-types": "^15.7.2",
+    "react": "16.8.3",
     "react-dom": "^16.8.6",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-size-matters": "^0.2.1",
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
