--- a/app.json
+++ b/app.json
@@ -9,34 +9,31 @@
       "android",
       "web"
     ],
-    "version": "1.0.0",
+    "version": "1.1.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "cover"
     },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
-      "buildNumber": "1.0.0",
+      "buildNumber": "1.1.1",
       "supportsTablet": true,
       "bundleIdentifier": "com.lesfilmsduplatpays.tftitems"
     },
     "android": {
       "permissions": [],
-      "versionCode": 1,
+      "versionCode": 2,
       "package": "com.lesfilmsduplatpays.tftitems"
     },
     "androidStatusBar": {
       "barStyle": "light-content"
     },
     "primaryColor": "#A3CB38",
-    "description": "Mobile app designed to help TeamFight Tactics players memorize the different item combinations.",
+    "description": "TFT Tactics is an app designed to help TeamFight Tactics players memorize the different item combinations. TFT Items isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.",
     "githubUrl": "https://github.com/jean-ben-guigui/TFTItems"
   }
 }
