--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
       "android",
       "web"
     ],
-    "version": "1.1.1",
+    "version": "1.1.4",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -20,13 +20,16 @@
       "**/*"
     ],
     "ios": {
-      "buildNumber": "1.1.1",
+      "buildNumber": "1.1.4",
       "supportsTablet": true,
-      "bundleIdentifier": "com.lesfilmsduplatpays.tftitems"
+      "bundleIdentifier": "com.lesfilmsduplatpays.tftitems",
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "permissions": [],
-      "versionCode": 2,
+      "versionCode": 4,
       "package": "com.lesfilmsduplatpays.tftitems"
     },
     "androidStatusBar": {
